tests/baselines/reference/generatorTypeCheck40(strict=true).errors.txt
generatorTypeCheck40.ts(2,22): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== generatorTypeCheck40.ts (1 errors) ====
    function* g() {
        class C extends (yield 0) { }
                         ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }